[tool.poetry]
name = "seat-arranger"
version = "0.1.0"
description = ""
authors = ["Anthony Panettiere <apanettiere@fastmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
